package com.example.seamlesstranslation.data

/**
 * Retrofit使用予定
 */
class RemoteDataSource {
}