package com.example.seamlesstranslation.data
import com.example.seamlesstranslation.domain.repository.TranslationRepository

class TranslationRepoImpl : TranslationRepository {

    override fun translate() {

    }

    override fun storeData() {

    }

}