package com.example.seamlesstranslation.data

class TranslationRepositoryImpl {
}