package com.example.seamlesstranslation.domain

/**
 * Entityが持つデータ
 */
enum class Lang(val lang : String) {
    EN("English"),
    JP("Japanese");
}