package com.example.seamlesstranslation.domain

import com.example.seamlesstranslation.domain.Lang

class TranslationEntity {
    val fromLang : String = Lang.EN.lang
    val toLang : String = Lang.JP.lang
}