package com.example.seamlesstranslation.domain

/**
 * ViewModelにデータを渡すためのクラス
 */
class TranslationOutputPort {
}