package com.example.seamlesstranslation.domain.repository

interface VoiceToTextRepository {
    fun convertVoiceToText()
}