package com.example.seamlesstranslation.presentation.viewmodel

class ViewModel {
}